tests/paczka2/big_fuzzy/22096959.err
Error in line 1: S379 A132 45,1
Error in line 24: oEI A462 55,8
Error in line 23: 4P27 A132 46,1
Error in line 28: 4P27 S379 78,9
Error in line 29: cBnfHB A132 77,9
Error in line 42: oEI A132 92,9
Error in line 53: LsP8fgKSTD A462 76,6
Error in line 55: LsP8fgKSTD S842 13,3
Error in line 60: OIELObdB A132 44,7
Error in line 49: S379 A462 216,8
Error in line 75: S379 S379 14,1
Error in line 79: S379 S842 72,4
Error in line 91: OIELObdB S379 49,0
Error in line 97: LsP8fgKSTD S842 393,2
Error in line 96: OIELObdB S842 53,2
Error in line 98: LsP8fgKSTD A132 67,1
Error in line 102: Q6YlQl S379 153,8
Error in line 128: LsP8fgKSTD A462 18,50
Error in line 113: LsP8fgKSTD A462 49,0
Error in line 134: S379 S842 43,15
Error in line 136: LsP8fgKSTD S842 62,9
Error in line 144: oEI S379 26,w
Error in line 142: oEI S842 69,6
Error in line 135: S379 S842 70,3
Error in line 151: S379 A462 72,1
Error in line 158: S379 A462 84,4
Error in line 168: OIELObdB A132 81,2
Error in line 165: S379 S842 55,2
Error in line 188: 4P27 A132 9,8
Error in line 197: Q6YlQl S379 174,6
Error in line 194: OIELObdB S842 35,8
Error in line 213: 4P27 A132 36,5
Error in line 228: oEI S3M9 58,9
Error in line 232: oEI S842 65,23
Error in line 225: S379 S842 68,4
Error in line 239: cBnfHB A462 61,3
Error in line 244: S379 A132 49,5
